feat: 중복 메뉴 주문시 오류